--- a/app/src/main/res/drawable/item_bg_right.xml
+++ b/app/src/main/res/drawable/item_bg_right.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#e8f0fe" />
+    <solid android:color="@color/item_bg" />
     <corners
         android:bottomLeftRadius="32dp"
         android:bottomRightRadius="0dp"
