--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#1976D2</color>
     <color name="colorAccent">#2979FF</color>
+
+    <color name="item_text">#1976D2</color>
+    <color name="item_bg">#4DBBDEFB</color>
+
+    <!--Reset to default on light theme-->
+    <color name="window_bg">@null</color>
+    <color name="navbar">@null</color>
 </resources>
