--- a/app/src/main/res/layout/item_check_view.xml
+++ b/app/src/main/res/layout/item_check_view.xml
@@ -2,19 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="48dp"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
     android:baselineAligned="false"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:weightSum="6">
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_weight="5"
+        android:layout_weight="1"
         android:background="@drawable/item_bg_left"
         android:gravity="center_vertical|start"
         android:padding="8dp"
@@ -41,9 +40,8 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="64dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:background="@drawable/item_bg_right"
         android:gravity="center_vertical|end"
         android:padding="8dp"
@@ -52,8 +50,8 @@
 
         <ImageView
             android:id="@+id/img_result"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:contentDescription="@string/the_result_of_the_item"
             tools:srcCompat="@drawable/check" />
     </LinearLayout>
