--- a/app/src/main/res/layout/item_check_view.xml
+++ b/app/src/main/res/layout/item_check_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="48dp"
@@ -26,8 +27,8 @@
             android:layout_height="32dp"
             android:contentDescription="@string/the_icon_of_the_item"
             android:scaleType="center"
-            android:tint="@color/item_text"
-            tools:srcCompat="@drawable/android_version" />
+            app:tint="@color/item_text"
+            tools:src="@drawable/android_version" />
 
         <TextView
             android:id="@+id/txt_name"
